samples/test5.mine.out

*** Error line 2.
    int x = -1; 
    ^^^
*** syntax error

