samples/test5.glsl
int main(int x) {
    int x = -1; 
    int x[10];
    (x+x) = vec4(0.55);
    1 < 2 ? 1 : 2 = x;
    if (x[10] = i) {
        break;
        for(;;i) {}
        do {
            int i = -3 + +4 * -+-+-+fff;
        } while (g || y <= asdf);
    } else {
        switch (x = 0) {
            case 1:
                y = 10 && k;
            case 2:
                x = x + (++foo())-- - test[10];
        }   
    }   
    return;
}
